--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
-    "react-router": "^6.20.0"
+    "react-router": "^6.20.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
